# cpp-systems-runtime-modules

./: README.md  SensorReadData.cpp
BoostIPC/: readme.md
Datapipes/Multi-thread safe Datapipe/: MultiThreaded Chunks into Datapipe.cpp
Register Setting/ManualRegisterSet/: Register_Setting.cpp
boost-ipc/: CMakeLists.txt  CMakePresets.json  README.md  build-details.txt  process_a.cpp  process_b.cpp
data-pipes/multithreaded-safe-data-pipe/: multithread-chunk-data-pipe.cpp
input-buffers/high-speed-ring-buffer/: hs-ring-buffer-interface.cpp
input-buffers/simple-circ-buffer/: simple-circ-buffer.cpp
register-ops-and-utils/: CMakeLists.txt  README.md  endian-swaps.cpp  high-res-time-util.cpp  light-logging.cpp  narrow-cast-safe-ops.cpp  register-bit-ops.cpp  register-mask-helpers.cpp  system_utils.hpp
sensor-acqusition/real-time-sensor-input-module/: sensor-read-data.cpp
sensor-acqusition/safe-transmitter-input-module/: safe-transmitter-input-module.cpp
sensor-filters/high-speed-sliding-filter/: high-speed-sliding-filter.cpp
sensor-filters/simple-moving-average-filter/: simple-moving-average-filter.cpp
